--- a/components/search-box-base.html
+++ b/components/search-box-base.html
@@ -60,7 +60,7 @@
     <template>
         <div class="form-group group-search">
 
-            <template is="dom-if" if="[[labelShow]]===true">
+            <template is="dom-if" if="[[labelShow]]">
                 <label>[[label]]</label>
             </template>
 
